--- a/_layouts/post-no-feature.html
+++ b/_layouts/post-no-feature.html
@@ -5,7 +5,7 @@
 <section class="article">
 
   <div class="overlay"></div>
-  <div class="featured-image" style="background-image: url({{ site.url }}/images/{{ page.image.feature }})"></div>
+  <div class="featured-image" style="background-image: url({{ site.url }}/images/{{  }})"></div>
 {% else %}
 
 {% include head-dark.html %}
@@ -19,7 +19,7 @@
         <header class="post-header">
           <hgroup>
             <h1>{{page.title}}</h1>
-            <p class="date">{{page.date | date: "%b %d, %Y" }}</p>
+           
             <p class="intro">{% if page.description %}{{ page.description }}{% else %}{{ page.tagline }}{% endif %}</p>
           </hgroup>
         </header>
