--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,5 +18,9 @@
           </article>
         </section>
     </div>
+.
+
+
+## Cupidatat 90's lo-fi authentic try-hard
 
 {% include footer.html %}
